# EasyQuickScreenshot

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  STRUCTURE.md  build.rs  config.example.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: gen_icon.py
bucket/: eqs.json
packaging/winget/0.2.0/: DavidVrba.EasyQuickScreenshot.installer.yaml  DavidVrba.EasyQuickScreenshot.locale.en-US.yaml  DavidVrba.EasyQuickScreenshot.yaml
scripts/: autostart.ps1  e2e-test.ps1  install.ps1
settings-app/: Cargo.toml  tauri.conf.json
settings-app/capabilities/: default.json
settings-app/src/: config_io.rs  gallery.rs  main.rs  tray_signal.rs
settings-app/ui/: app.js  index.html  styles.css
src/: capture.rs  clipboard.rs  config.rs  main.rs  overlay.rs  save.rs  tray.rs
