[package]
name = "easy-quick-screenshot"
version = "0.1.0"
edition = "2021"
description = "Instant region screenshots for Windows. Hotkey, crosshair, drag, done — no flash, no shutter, no folder bloat."
license = "MIT"
repository = "https://github.com/david-vrba/EasyQuickScreenshot"
keywords = ["screenshot", "windows", "capture", "hotkey", "screen"]
categories = ["multimedia::images", "os::windows-apis"]

[[bin]]
name = "eqs"
path = "src/main.rs"

[dependencies]
png = "0.17"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
