[package]
name = "eqs-settings"
version = "0.1.0"
edition = "2021"
description = "Settings, gallery and dashboard for EasyQuickScreenshot"
license = "MIT"

[[bin]]
name = "eqs-settings"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
